<resources>
    <string name="app_name">unit9_studymates</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">ADD</string>
    <string name="actiuon_remove">REMOVE</string>
    <string name="action_email">EMAIL</string>
    <string name="action_sms">SMS</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
