<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_message_black_24dp"
        android:orderInCategory="102"
        android:title="@string/action_sms"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="101"
        android:title="@string/action_email" />
    <item
        android:id="@+id/action_remove"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/actiuon_remove" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/action_add" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
