<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/action_add" />
        <item
            android:id="@+id/nav_remove"
            android:icon="@android:drawable/btn_dialog"
            android:title="@string/actiuon_remove" />
        <item
            android:id="@+id/nav_email"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/action_email" />
        <item
            android:id="@+id/nav_sms"
            android:icon="@android:drawable/btn_star"
            android:title="@string/action_sms" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
